<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity!</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="_0" translatable="false">$0</string>
    <string name="order_summary">Order summary</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="total">
        Total: <xliff:g id="price" example="$100">%s</xliff:g>
    </string>
    <string name="total_quantity">
        Quantity: <xliff:g id="quantity" example="1">%s</xliff:g>
    </string>
    <string name="add_chocolate">
        Add chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g>
    </string>
    <string name="add_wipped_cream">
        Add wipped cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g>
    </string>
    <string name="order_summary_name">
        Name: <xliff:g id="name" example="Amy">%s</xliff:g>
    </string>

</resources>
